<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_CRYO_PUMP_STATE" Id="{53aeb688-082e-4fd6-870a-1abb75c2eeee}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CRYO_PUMP_STATE :
(
	OFF := 0,
	STARTING,
	ON,
	STOPPING,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>